Media query added

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -76,3 +76,9 @@ div.ui.container.bg-grey{
     transform: rotateX(0);
   }
 }
+
+@media only screen and (max-width: 800px){
+  .sub-max-width{
+    display: none;
+  }
+}
