--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,14 +1,21 @@
+body {
+  background-color: rgb(38, 38, 38);
+  color: rgb(232, 230, 230);
+}
+
 p {
   line-height: 1.5;
 }
 
-.h1-font-size {
-  font-size: xx-large;
-}
+// .h1-font-size {
+//   padding-top: 30px;
+//   font-size: 100px;
+// }
 
 .array-container {
   position: absolute;
   bottom: 25px;
+
   left: 50px;
   margin: 0;
   padding: 0;
@@ -16,7 +23,7 @@ p {
 
 .array-line {
   width: 2px;
-  background-color: #5ac75c;
+  background-color: #f253a8;
   display: inline-block;
   margin: auto 1px;
   padding: 0;
