Font awesome added

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -95,6 +95,10 @@ div.ui.container.bg-grey {
   margin-top: 15px;
 }
 
+.white-i {
+  color: white;
+}
+
 .animate-content {
   animation: transitionDown 2s;
 }
