Media queries added

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -126,6 +126,12 @@ div.ui.container.bg-grey {
   }
 }
 
+@media only screen and (max-width: 1000px) {
+  .flex-wrap {
+    margin-right: 50px;
+  }
+}
+
 @media only screen and (max-width: 900px) {
   .sub-max-width {
     display: none;
