--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,16 @@
 body {
   background-color: rgb(38, 38, 38);
   color: rgb(232, 230, 230);
+  -webkit-transition: color 1s ease-out;
+  -moz-transition: color 1s ease-out;
+  -o-transition: color 1s ease-out;
+  -ms-transition: color 1s ease-out;
+  transition: color 1s ease-out;
+  -webkit-transition: background-color 1s ease-out;
+  -moz-transition: background-color 1s ease-out;
+  -o-transition: background-color 1s ease-out;
+  -ms-transition: background-color 1s ease-out;
+  transition: background-color 1s ease-out;
 }
 
 p {
