Project npm build

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -138,6 +138,9 @@ div.ui.container.bg-grey {
   .flex-wrap {
     margin-right: 50px;
   }
+  .minor-header {
+    margin-right: 50px;
+  }
 }
 
 @media only screen and (max-width: 900px) {
